force-app/main/default/objects/Carro__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carros</relationshipLabel>
    <relationshipName>Carros</relationshipName>
    <type>Lookup</type>
</CustomField>