force-app/main/default/objects/Carro__c/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <label>Ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>