force-app/main/default/objects/Carro__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>