force-app/main/default/objects/Carro__c/fields/Preco__c.field-meta.xml
<CustomField>
    <fullName>Preco__c</fullName>
    <label>Preco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>