force-app/main/default/objects/Carro__c/fields/Vendido__c.field-meta.xml
<CustomField>
    <fullName>Vendido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendido</label>
    <type>Checkbox</type>
</CustomField>